# delete_bin_obj

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  main.rs
