[package]
name = "delete_bin_obj"
version = "0.2.1"
edition = "2021"
authors = ["PKaiser"]
license = "MIT"
description = "Deletes the bin and obj folders in a VS solution."
readme = "README.md"
repository = "https://github.com/PreussenKaiser/delete_bin_obj"
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3.26"
walkdir = "2"